Fix links being wrong color on Github pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
 }
 
 a {
+  color: #AD974E;
   text-decoration: none;
 }
 
